don't crash during chart copying, fdo#66508

(cherry picked from commit 92207231c3742873ad3b3a6fed2963d1bf924ad3)

Change-Id: I3a4806fcae7b830e71cda0ab7e6d5ac6f180d4d3